# pranic-current

./: .gitignore  LICENSE  config.yaml  pyproject.toml  requirements.txt  start.ps1  stop.ps1
docs/: ROADMAP.md  SETUP.md  svara_shastra.md
pranic_current/: .env.example  README.md  __init__.py  __main__.py  ci.yml  cli.py  config.yaml  extensions.json  launch.json  logbook.py  notify.py  panchanga.py  pyproject.toml  swara.py  tattva.py
tests/: test_swara.py
